# fellow-buffalo-env

./: Dockerfile  README.md  add_adversarial_emails.py  add_attachment_emails.py  add_difficulty.py  add_task4_emails.py  add_thread_emails.py  api_server.py  app.py  check_emails.py  client.py  create_test_emails.py  environment.py  fix_email.py  fix_task3_emails.py  gradio_app.py  inference.py  jsonfiledata.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_negative.py  test_show_emails.py
server/: app.py
test_emails/: adv_001.json  adv_002.json  adv_003.json  adv_004.json  adv_005.json  adv_006.json  adv_007.json  att01.json  att02.json  att03.json  e01.json  e02.json  e03.json  e04.json  e05.json  e06.json  e07.json  e08.json  e09.json  e10.json  e11.json  e12.json  e13.json  e14.json  e15.json  e16.json  e17.json  e18.json  e19.json  e20.json  e21.json  e22.json  task3_future_001.json  task3_future_002.json  task3_future_003.json  task3_future_1.json  task3_future_2.json  task3_future_3.json  task3_old_1.json  task3_old_2.json  (+31 more)
