[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fellow-buffalo"
version = "1.0.0"
description = "Email triage OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[tool.uv]
dev-dependencies = []